k8s/k8s-prod/internal-gateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-gateway-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: internal-gateway
  template:
    metadata:
      labels:
        app: internal-gateway
    spec:
      containers:
        - name: internal-gateway
          image: asia.gcr.io/digidocs-stage/internal-gateway-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: internal-gateway-srv
spec:
  selector:
    app: internal-gateway
  ports:
    - name: internal-gateway
      protocol: TCP
      port: 80
      targetPort: 80
