k8s/k8s-prod/signing-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signing-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signing
  template:
    metadata:
      labels:
        app: signing
    spec:
      containers:
        - name: signing
          image: asia.gcr.io/earnest-reactor-324513/signing
---
apiVersion: v1
kind: Service
metadata:
  name: signing-srv
spec:
  selector:
    app: signing
  ports:
    - name: signing
      protocol: TCP
      port: 3000
      targetPort: 3000
